# GJUFilesBackend

./: Cargo.toml  README.md  build.rs  diesel.toml  docker-compose.yml
migrations/2024-12-07-092253_create_courses/: down.sql  up.sql
src/: authentication.rs  connection.rs  course_initialization.rs  course_insertion.rs  course_retreival.rs  faculties.rs  main.rs  models.rs  schema.rs
src/data/: Courses.json
