[package]
name = "gjufilesbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = {version = "0.6.20", features = ["headers", "multipart"]}
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0.61"
uuid = { version = "1.11.0", features = ["serde", "v4", "macro-diagnostics", "fast-rng"] }
chrono = { version = "0.4.39", features = ["serde"] }
lazy_static = "1.5.0"
tower-http = { version = "0.3", features = ["cors"] }


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"