[package]
name = "gjufilesbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = {version = "0.6.20", features = ["headers", "multipart"]}
axum-macros = "0.4.2"
regex = "1.11.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0.61"
uuid = { version = "1.11.0", features = ["serde", "v4", "macro-diagnostics", "fast-rng"] }
chrono = { version = "0.4.39", features = ["serde"] }
tower-http = { version = "0.3", features = ["cors"] }
gcp_auth = "0.12.3"
reqwest = { version = "0.12.9", features = ["json"] }

[features]
local_dev_deployment = []